# egon-browser

./: .gitignore  BUILD.gn  CONTRIBUTING.md  LICENSE  PRESUBMIT.py  README.md  android.sh  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.storybook/: locale.ts
android/: brave_java_resources.gni
android/javatests/: AndroidManifest.xml
app/: brave_generated_resources.grd  brave_settings_strings.grdp  brave_strings_override.grd  extensions_strings_override.grdp  file_manager_strings.grdp  generated_resources_override.grd  nux_strings.grdp  os_settings_strings_override.grdp  settings_brave_strings_override.grdp  settings_strings_override.grdp
args/: gn_logs.txt
ash/: ash_strings.grd
browser/: about_flags.cc  brave_content_browser_client.cc  brave_content_browser_client_browsertest.cc  brave_profile_prefs.cc  brave_scheme_load_browsertest.cc
chrome/updater/: branding.gni
chromeos/: chromeos_strings.grd
common/: brave_content_client_unittest.cc
components/: autofill_assistant_strings.grdp  autofill_payments_strings.grdp  autofill_strings.grdp  commerce_strings.grdp  components_chromium_strings.grd  components_google_chrome_strings.grd  error_page_strings.grdp  flags_strings.grdp  heavy_ad_intervention_strings.grdp  history_clusters_strings.grdp  history_strings.grdp  management_ios_strings.grdp  management_strings.grdp  new_or_sad_tab_strings.grdp  new_or_sad_tab_strings_override.grdp  ntp_tiles_strings.grdp  omnibox_pedal_ui_strings.grdp  omnibox_pedal_ui_strings_override.grdp  omnibox_strings.grdp  page_info_strings.grdp  password_manager_strings.grdp  payments_strings.grdp  permissions_strings.grdp  policy_strings.grdp  privacy_sandbox_strings.grdp  privacy_sandbox_strings_override.grdp  reset_password_strings.grdp  security_interstitials_strings.grdp  security_interstitials_strings_override.grdp  ssl_errors_strings.grdp  subresource_filter_strings.grdp  translate_strings.grdp  version_ui_strings.grdp
content/: dev_ui_content_resources.grd
docs/: rust.md
script/: brave_license_helper.py  chromium-rebase-l10n.py  signing_helper.py
test/: BUILD.gn
(+3145 files in other folders)
