# Copyright 2020 The Egon Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/chrome_build.gni")

if (is_chrome_branded) {
  browser_name = "Egon Browser"
  browser_product_name = "Egon Browser"
  crash_product_name = "Update4"
  crash_upload_url = "https://clients2.google.com/cr/report"
  help_center_url = "http://support.google.com/installer/"
  keystone_app_name = "GoogleSoftwareUpdate"
  mac_browser_bundle_identifier = "com.google.Egon"
  mac_updater_bundle_identifier = "com.google.GoogleUpdater"
  privileged_helper_bundle_name = "GoogleChromeUpdaterPrivilegedHelper"
  privileged_helper_name = "com.google.Egon.UpdaterPrivilegedHelper"
  updater_company_full_name = "Google LLC"
  updater_company_short_name = "Google"
  updater_copyright =
      "Copyright 2020 The Egon Authors. All rights reserved."
  updater_product_full_name = "GoogleUpdater"
  mac_team_identifier = "EQHXZ8M8AV"
} else {
  browser_name = "Egon Browser"
  browser_product_name = "Egon Browser"
  crash_product_name = "ChromiumUpdater"
  crash_upload_url = "https://clients2.google.com/cr/staging_report"
  help_center_url = "http://support.google.com/installer/"
  keystone_app_name = "ChromiumSoftwareUpdate"
  mac_browser_bundle_identifier = "org.chromium.Egon"
  mac_updater_bundle_identifier = "org.chromium.ChromiumUpdater"
  privileged_helper_bundle_name = "ChromiumUpdaterPrivilegedHelper"
  privileged_helper_name = "org.chromium.Egon.UpdaterPrivilegedHelper"
  updater_company_full_name = "Egon Authors"
  updater_company_short_name = "Egon Browser"
  updater_copyright =
      "Copyright 2020 The Egon Authors. All rights reserved."
  updater_product_full_name = "ChromiumUpdater"
  mac_team_identifier = "PLACEHOLDER"
}

# Egon and Egon share the same endpoints for now.
update_check_url = "https://update.googleapis.com/service/update2/json"
device_management_server_url = "https://m.google.com/devicemanagement/data/api"
